# clipboardman

./: .gitignore  Cargo.toml  README.md
src/app/: lib.rs
