[package]
name = "clipboardman"
version = "0.1.0"
edition = "2021"
authors = ["Amirhossein Fazli <amirhossein95b@gmail.com>"]
description = "Cross-platform clipboard history manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amirhossein-fzl/clipboardman"
keywords = ["clipboard", "utility", "productivity", "gui"]
categories = ["gui", "utilities"]

[lib]
name = "clipboardman"
path = "src/app/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
